build: update dependencies